# aries-acapy-plugin-data-transfer

./: .pre-commit-config.yaml  Dockerfile  Dockerfile.test  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: code-quality-check.yml  publish-release.yml  tests.yml
acapy_plugin_data_transfer/: __init__.py  data_transfer.py  definition.py
acapy_plugin_data_transfer/tests/: test_data_transfer.py
acapy_plugin_data_transfer/v0_1/: __init__.py  data_transfer.py  message_types.py
acapy_plugin_data_transfer/v0_1/tests/: test_data_transfer.py
int/: Dockerfile.runner  docker-compose.yml  pyproject.toml
int/tests/: conftest.py  test_data_transfer.py
scripts/: run_tests
tests/: test_data_transfer.py
